--- a/ansible/Vagrantfile
+++ b/ansible/Vagrantfile
@@ -15,9 +15,12 @@ Vagrant.configure("2") do |config|
     app.vm.hostname = "appserver"
     app.vm.network :private_network, ip: "10.10.10.10"
 
-    # app.vm.provision "ansible" do |ansible|
-    #   ansible.playbook = "app.yml"
-    # end
+    app.vm.provision "ansible" do |ansible|
+      ansible.playbook = "app.yml"
+      ansible.groups = {
+        "app" => ["appserver"],
+      }
+    end
   end
 
   # Define dbmaster server
