--- a/ansible/roles/php_fpm/meta/main.yml
+++ b/ansible/roles/php_fpm/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Nikolay Antsiferov
-  description: Install & configure nginx
+  description: Install & configure php-fpm
   company: None
 
   license: license (BSD, MIT)
@@ -13,7 +13,7 @@ galaxy_info:
         - stretch
 
   galaxy_tags:
-    - nginx
-    - http
+    - php-fpm
+    - php
 
 dependencies: []
