--- a/ansible/roles/app_deploy/tasks/main.yml
+++ b/ansible/roles/app_deploy/tasks/main.yml
@@ -3,13 +3,13 @@
 
 - name: Check permissions
   file:
-    path: /var/www/site
+    path: "{{ www_site_root }}"
     owner: "{{ app_wwwuser }}"
     group: "{{ app_wwwuser }}"
 
 - name: Deploy index.php
   copy:
     src: index.php
-    dest: /var/www/site/index.php
+    dest: "{{ www_site_root }}/index.php"
     owner: "{{ app_wwwuser }}"
     group: "{{ app_wwwuser }}"
