--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -5,6 +5,7 @@ private_key_file = ~/.ssh/appuser
 host_key_checking = False
 roles_path = ./roles
 retry_files_enabled = False
+allow_world_readable_tmpfiles = True
 
 [diff]
 always = True
