--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = ./environments/vagrant/inventory.yml
-remote_user = appuser
+remote_user = admin
 private_key_file = ~/.ssh/appuser
 host_key_checking = False
 roles_path = ./roles
