--- a/ansible/Vagrantfile
+++ b/ansible/Vagrantfile
@@ -16,7 +16,7 @@ Vagrant.configure("2") do |config|
     app.vm.network :private_network, ip: "10.10.10.10"
 
     app.vm.provision "ansible" do |ansible|
-      ansible.playbook = "app.yml"
+      ansible.playbook = "site.yml"
       ansible.groups = {
         "app" => ["appserver"],
       }
@@ -29,9 +29,9 @@ Vagrant.configure("2") do |config|
     db.vm.hostname = "dbmaster"
     db.vm.network :private_network, ip: "10.10.10.21"
 
-    # db.vm.provision "ansible" do |ansible|
-    #   ansible.playbook = "db.yml"
-    # end
+    db.vm.provision "ansible" do |ansible|
+      ansible.playbook = "db.yml"
+    end
   end
 
   # Define dbslave server
@@ -40,8 +40,8 @@ Vagrant.configure("2") do |config|
     db.vm.hostname = "dbslave"
     db.vm.network :private_network, ip: "10.10.10.22"
 
-    # db.vm.provision "ansible" do |ansible|
-    #   ansible.playbook = "db.yml"
-    # end
+    db.vm.provision "ansible" do |ansible|
+      ansible.playbook = "db.yml"
+    end
   end
 end
