--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,11 +1,13 @@
 [defaults]
 inventory = ./environments/vagrant/inventory.yml
 remote_user = admin
-private_key_file = ~/.ssh/appuser
+private_key_file = ../id_rsa
 host_key_checking = False
 roles_path = ./roles
 retry_files_enabled = False
 allow_world_readable_tmpfiles = True
+stdout_callback = yaml
+vault_password_file = vault.key
 
 [diff]
 always = True
