--- a/ansible/db.yml
+++ b/ansible/db.yml
@@ -6,6 +6,7 @@
   roles:
     - role: pgsql_ms
       pgsql_type: master
+      tags: db, dbmaster
 
 - name: Install pgsql on slave
   hosts: dbslave
@@ -14,3 +15,4 @@
   roles:
     - role: pgsql_ms
       pgsql_type: slave
+      tags: db, dbslave
