--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -1,3 +1,4 @@
+---
 # tasks file for nginx
 - name: Show stub
   debug:
@@ -5,7 +6,7 @@
 
 - name: Update apt cache
   apt:
-    update_cache: yes
+    update_cache: true
     cache_valid_time: 86400
 
 - name: Ensure nginx packages are installed
@@ -41,4 +42,4 @@
   service:
     name: nginx
     state: started
-    enabled: yes
+    enabled: true
