--- a/ansible/roles/app_deploy/tasks/main.yml
+++ b/ansible/roles/app_deploy/tasks/main.yml
@@ -1,6 +1,17 @@
 ---
 # tasks file for app_deploy
 
+- name: Update apt cache
+  apt:
+    update_cache: true
+    cache_valid_time: 86400
+
+- name: Ensure packages are installed
+  apt:
+    name: "{{ item }}"
+  loop:
+    - rsync
+
 - name: Deploy site
   synchronize:
     owner: no
